# token-signer

./: .gitignore  CMakeLists.txt  PACKAGING.md  config.yaml
src/: config.cpp  config.h  constants.cpp  crypto-constants.h  cryptooperations.cpp  cryptooperations.h  main.cpp  utils.cpp
src/avpass/: avpass.cpp  avpass_p.h  hidapi.cpp  hidapi.h
src/include/: abstractcryptoki.h  avpass.h  constants.h  ntctw_types.h  softtoken.h  utils.h
